--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+beautifulsoup4==4.4.1
+bs4==0.0.1
 dj-database-url==0.4.0
 Django==1.9.2
 gunicorn==19.4.5
-whitenoise==2.0.6
+lxml==3.6.0
 psycopg2==2.6.1
-
+requests==2.10.0
+whitenoise==2.0.6
